--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "mfe-checkout",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3004",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@ashkur/teste.ui.card": "^0.0.1",
-    "@ashkur/teste.ui.nav-bar": "^0.0.2",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
